# teo-self-presentation

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
cmake/: CMakeLists.txt  TEO-SELF-PRESENTATIONDescribe.cmake  TEO-SELF-PRESENTATIONOptions.cmake  TEO-SELF-PRESENTATIONPackage.cmake  TEO-SELF-PRESENTATIONVersion.cmake
cmake/template/: TEO-SELF-PRESENTATIONConfig.cmake.in
doc/: CMakeLists.txt  groups.dox  main.dox  teo-self-presentation-install.md
gnome/: teo-self-presentation.desktop
libraries/: CMakeLists.txt
libraries/ExampleLibrary/: CMakeLists.txt
libraries/SelfPresentationCommandsIDL/: CMakeLists.txt  SelfPresentationCommands.thrift
programs/: CMakeLists.txt
programs/BodyExecution/: BodyExecution.cpp  BodyExecution.hpp  CMakeLists.txt  main.cpp
programs/DialogueManager/: CMakeLists.txt  DialogueManager.cpp  DialogueManager.hpp  DialogueManager.hpp.autosave  ScriptManager.cpp  ScriptManager.hpp  StateMachine.cpp  StateMachine.cpp.autosave  StateMachine.hpp  StateMachine.hpp.autosave  main.cpp
programs/dialogueManager/: DialogueManager.cpp  StateMachine.cpp  main.cpp
programs/exampleProgram/: CMakeLists.txt  ExampleProgram.cpp  ExampleProgram.hpp  main.cpp
scripts/admin/: update-dox.sh
scripts/gnome/: teo-self-presentation.desktop
share/: CMakeLists.txt
share/app/teo-self-presentation/: doc.dox
share/app/teo-self-presentation/scripts/: teo-self-presentation_english.xml  teo-self-presentation_spanish.xml
share/applications/: teo-self-presentation_english.xml  teo-self-presentation_english_sim.xml  teo-self-presentation_spanish.xml  teo-self-presentation_spanish_sim.xml
share/contexts/dialogueManager/: english.ini  spanish.ini
